# impulse-recommender

./: .gitignore  CMakeLists.txt  main.cpp  saved.json
data/: data.csv  movie_lens.csv  test.csv
src/Impulse/Recommender/: Builder.cpp  Builder.h  Model.cpp  Model.h  Serializer.cpp  Serializer.h  SmartTrainer.cpp  SmartTrainer.h  Trainer.cpp  Trainer.h  common.cpp  common.h  include.h
src/Impulse/Recommender/Math/: common.cpp  common.h
